--- a/UserLogin.html
+++ b/UserLogin.html
@@ -33,7 +33,7 @@
     </div>
       User Login
       <div id="user">
-      <img src="Home.png" height="40px" onclick="window.location.href = 'Eff.html'">
+      <img src="Home.png" height="40px" onclick="window.location.href = 'index.html'">
     </div>
     </div>
     <div class="banner2">
@@ -56,7 +56,7 @@
   Welcome To Small Pro
 </div>
 <div id="hmbtn">
-  <button type="button" name="button" onclick="window.location.href = 'Eff.html'">Home</button>
+  <button type="button" name="button" onclick="window.location.href = 'index.html'">Home</button>
 </div>
 </center>
 
