--- a/Cart.html
+++ b/Cart.html
@@ -13,7 +13,7 @@
     </div>
       Shopping Cart
       <div id="user">
-      <img src="Home.png" height="40px" onclick="window.location.href = 'Eff.html'">
+      <img src="Home.png" height="40px" onclick="window.location.href = 'index.html'">
     </div>
     </div>
     <div class="banner2">
